ai-image-project/k8-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-image-api-service
spec:
  type: ClusterIP
  selector:
    app: ai-image-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
