ai-image-project/k8-manifests/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-image-worker-service
spec:
  type: ClusterIP
  selector:
    app: ai-image-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
