ai-image-project/k8-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-image-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ai-image-api-service
            port:
              number: 80
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: ai-image-api-service
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: ai-image-api-service
            port:
              number: 80
